--- a/OuFood/app/src/main/res/layout/activity_forgot_password.xml
+++ b/OuFood/app/src/main/res/layout/activity_forgot_password.xml
@@ -14,14 +14,35 @@
         android:scaleType="centerCrop"
         android:src="@drawable/main_background" />
 
-    <ImageView
-        android:id="@+id/buttonBack"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:padding="12dp"
-        android:src="@drawable/baseline_arrow_back_ios_24"
-        app:title="@string/app_name" />
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/buttonBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:src="@drawable/baseline_arrow_back_ios_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="@string/app_name" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Quên mật khẩu"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,11 +54,18 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50sp"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
             android:text="@string/forgot_password"
             android:textColor="@color/color_text_background"
             android:textSize="40sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nhập email của bạn. Chúng tôi sẽ gửi\n mã để đặt lại mật khẩu của bạn"
+            android:layout_marginBottom="20dp"
+            android:textSize="18sp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
@@ -45,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20sp"
             android:layout_marginRight="20sp"
-            android:hint="Nhập Email"
+            android:hint="Email"
             app:boxCornerRadiusBottomEnd="20sp"
             app:boxCornerRadiusBottomStart="20sp"
             app:boxCornerRadiusTopEnd="20sp"
