--- a/OuFood/app/src/main/res/layout/activity_sign_in.xml
+++ b/OuFood/app/src/main/res/layout/activity_sign_in.xml
@@ -65,7 +65,7 @@
             android:layout_marginLeft="20sp"
             android:layout_marginTop="10sp"
             android:layout_marginRight="20sp"
-            android:hint="Password"
+            android:hint="Mật khẩu"
             app:boxCornerRadiusBottomEnd="20sp"
             app:boxCornerRadiusBottomStart="20sp"
             app:boxCornerRadiusTopEnd="20sp"
@@ -92,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Remember me" />
+                android:text="Lưu tài khoản đăng nhập" />
 
             <TextView
                 android:id="@+id/tv_ForgotPass"
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:text="Forgot password?" />
+                android:text="Quên mật khẩu" />
 
 
         </RelativeLayout>
@@ -116,36 +116,7 @@
             android:textColor="@color/white"
             android:textSize="25sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20sp"
-            android:layout_marginTop="30sp"
-            android:layout_marginRight="20sp"
-            android:gravity="center"
-            android:orientation="horizontal">
 
-            <View
-                android:layout_width="0sp"
-                android:layout_height="2sp"
-                android:layout_weight="1"
-                android:background="#edeeee" />
-
-            <TextView
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="or continue with"
-                android:textSize="14sp" />
-
-            <View
-                android:layout_width="0sp"
-                android:layout_height="2sp"
-                android:layout_weight="1"
-                android:background="#edeeee" />
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,14 +127,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account? "
+                android:text="Lần đầu đến với OUFood? "
                 android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/tv_SignupNow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Signup now"
+                android:text="Đăng ký"
                 android:textStyle="bold"
                 android:textColor="@color/blue"
                 android:textSize="20dp" />
