--- a/OuFood/app/src/main/res/layout/activity_home.xml
+++ b/OuFood/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
     <LinearLayout
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -29,62 +29,62 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:layout_weight="0.333"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_weight="0.25"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/nav_menu"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:padding="1dp"
                 android:src="@drawable/menu"
-                app:tint="@color/blue"/>
+                app:tint="@color/blue" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Menu"
-                android:textStyle="bold"
-                android:textColor="@color/blue"/>
+                android:textColor="@color/blue"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:layout_weight="0.333"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_weight="0.25"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/nav_cart"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:padding="1dp"
                 android:src="@drawable/cart"
-                app:tint="@color/blue"/>
+                app:tint="@color/blue" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Giỏ hàng"
-                android:textStyle="bold"
-                android:textColor="@color/blue"/>
+                android:textColor="@color/blue"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:layout_weight="0.333"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_weight="0.25"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/nav_order"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:padding="1dp"
                 android:src="@drawable/order"
                 app:tint="@color/blue" />
@@ -93,22 +93,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đơn hàng"
-                android:textStyle="bold"
-                android:textColor="@color/blue"/>
+                android:textColor="@color/blue"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:layout_weight="0.333"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_weight="0.25"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/nav_account"
-                android:layout_width="51dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:padding="1dp"
                 android:src="@drawable/account"
                 app:tint="@color/blue" />
@@ -117,8 +117,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tài khoản"
-                android:textStyle="bold"
-                android:textColor="@color/blue"/>
+                android:textColor="@color/blue"
+                android:textStyle="bold" />
 
         </LinearLayout>
     </LinearLayout>
