--- a/OuFood/app/src/main/res/layout/activity_home.xml
+++ b/OuFood/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,10 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/border">
 
 
         <LinearLayout
