--- a/OuFood/app/src/main/res/layout/activity_sign_in.xml
+++ b/OuFood/app/src/main/res/layout/activity_sign_in.xml
@@ -28,15 +28,10 @@
             android:text="@string/app_name"
             android:textColor="@color/main_color"
             android:textSize="50sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginBottom="80dp"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/login"
-            android:textColor="@color/color_text_background"
-            android:textSize="40sp" />
+
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
