--- a/OuFood/app/src/main/res/values/colors.xml
+++ b/OuFood/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0D5eF9</color>
+    <color name="red">#f92a0d</color>
+    <color name="gray">#808080</color>
+
 
     <color name="platinum">#E8E8E8</color>
 
