--- a/OuFood/app/src/main/res/values/colors.xml
+++ b/OuFood/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0D5eF9</color>
     <color name="red">#f92a0d</color>
-    <color name="gray">#808080</color>
-
+    <color name="gray">#F5F5F5</color>
+    <color name="yellow">#FFD700</color>
 
     <color name="platinum">#E8E8E8</color>
 
