--- a/OuFood/app/src/main/res/layout/item_food.xml
+++ b/OuFood/app/src/main/res/layout/item_food.xml
@@ -14,40 +14,30 @@
 
         <ImageView
             android:id="@+id/pic"
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="111dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <TextView
-            android:id="@+id/textView_discount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:text="20%\nOFF"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:background="@color/yellow"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/baseline_info_24"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pic">
+            app:layout_constraintStart_toEndOf="@+id/pic"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/textView_name"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_height="50dp"
                 android:text="title"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:layout_margin="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -58,11 +48,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="10dp"
-                android:text="$0"
+                android:text="0đ"
                 android:textColor="@color/blue"
                 android:textSize="18sp"
                 android:textStyle="bold"
-
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView_name"
                 app:layout_constraintTop_toBottomOf="@+id/textView_name" />
@@ -71,23 +60,35 @@
                 android:id="@+id/imageView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintBottom_toBottomOf="@id/textView_price"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:tint = "@color/yellow"
-                app:srcCompat="@drawable/star" />
+                app:layout_constraintBottom_toBottomOf="@+id/textView_star"
+                app:layout_constraintStart_toEndOf="@+id/textView_star"
+                app:srcCompat="@drawable/star"
+                app:tint="@color/yellow" />
 
             <TextView
                 android:id="@+id/textView_star"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="5"
-                android:layout_marginEnd="8dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView12"
-                app:layout_constraintEnd_toStartOf="@+id/imageView12"
-                app:layout_constraintTop_toTopOf="@+id/imageView12" />
+                app:layout_constraintBottom_toTopOf="@+id/textView_price"
+                app:layout_constraintStart_toStartOf="@+id/textView_name"
+                app:layout_constraintTop_toBottomOf="@+id/textView_name" />
+
+            <TextView
+                android:id="@+id/textView_plus"
+                android:layout_width="44dp"
+                android:layout_height="39dp"
+                android:text="+"
+                android:background="@drawable/button_rounded"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
