All sale food activity

--- a/OuFood/app/src/main/res/layout/fragment_menu.xml
+++ b/OuFood/app/src/main/res/layout/fragment_menu.xml
@@ -141,7 +141,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/button_FlashSale"
+                    android:id="@+id/button_flashSale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Xem tất cả "
