--- a/OuFood/app/src/main/res/layout/fragment_menu.xml
+++ b/OuFood/app/src/main/res/layout/fragment_menu.xml
@@ -87,7 +87,18 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/fragment_search"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout"/>
+
+
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
