change CartFragment to CartActivity

--- a/OuFood/app/src/main/res/layout/fragment_menu.xml
+++ b/OuFood/app/src/main/res/layout/fragment_menu.xml
@@ -17,6 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
@@ -211,4 +212,19 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <ImageView
+        android:id="@+id/imageView_cart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/border"
+        android:padding="12dp"
+        android:backgroundTint="@color/blue"
+        app:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/cart" />
 </androidx.constraintlayout.widget.ConstraintLayout>
