--- a/OuFood/app/src/main/res/layout/item_food_sale_a.xml
+++ b/OuFood/app/src/main/res/layout/item_food_sale_a.xml
@@ -44,26 +44,25 @@
             app:layout_constraintVertical_bias="1.0">
 
             <ImageView
-                android:id="@+id/imageView9"
-                android:layout_marginStart="8dp"
+                android:id="@+id/imageView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/textView_star"
-                app:layout_constraintStart_toEndOf="@+id/textView_star"
-                app:layout_constraintTop_toTopOf="@+id/textView_star"
-                app:tint="@color/yellow"
-                app:srcCompat="@drawable/star" />
+                app:layout_constraintBottom_toTopOf="@+id/textView9"
+                app:layout_constraintStart_toStartOf="@+id/textView_name"
+                app:layout_constraintTop_toBottomOf="@+id/textView_name"
+                app:srcCompat="@drawable/star"
+                app:tint="@color/yellow" />
 
             <TextView
                 android:id="@+id/textView_star"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4"
-                android:textSize="18sp"
+                android:text="5"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/textView_price"
-                app:layout_constraintStart_toStartOf="@+id/textView_name"
-                app:layout_constraintTop_toBottomOf="@+id/textView_name" />
+                app:layout_constraintBottom_toBottomOf="@+id/imageView12"
+                app:layout_constraintStart_toEndOf="@+id/imageView12"
+                app:layout_constraintTop_toTopOf="@+id/imageView12" />
 
             <TextView
                 android:id="@+id/textView_name"
@@ -92,17 +91,30 @@
 
 
             <TextView
-                android:id="@+id/textView_price"
+                android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0đ"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="đ"
                 android:textColor="@color/blue"
                 android:textSize="18dp"
                 android:textStyle="bold"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textView_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textColor="@color/blue"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:layout_marginStart="2dp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView9"
+                app:layout_constraintStart_toEndOf="@+id/textView9"
+                app:layout_constraintTop_toTopOf="@+id/textView9" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
