--- a/OuFood/app/src/main/res/layout/fragment_menu.xml
+++ b/OuFood/app/src/main/res/layout/fragment_menu.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="@color/white"
     tools:context=".Fragment.MenuFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:padding="2dp"
             android:text="   Giao đến:"
+            android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
+            android:textColor="@color/black"
             android:text="Trường Dại Học Mở cơ sở Nhà Bè"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView6"
@@ -58,45 +60,34 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/grey_background"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:background="@drawable/grey_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <ImageView
-            android:id="@+id/button_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="4dp"
-            app:srcCompat="@drawable/search_icon" />
+            android:src="@drawable/search_icon"/>
 
-        <EditText
-            android:id="@+id/textView_search"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@null"
-            android:hint="Search ..."
-            android:textAlignment="center" />
-
+            android:text="Tìm món ngon ở đây"
+            android:textColor="@color/black"
+            android:gravity="center" />
 
     </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/fragment_search"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/border"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout"/>
-
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -114,7 +105,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="wrap_content"
                 android:background="@color/white">
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -156,13 +147,14 @@
                     android:id="@+id/button_flashSale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="Xem tất cả "
                     android:textSize="18dp" />
             </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="360dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:background="@color/white">
 
