--- a/OuFood/app/src/main/res/layout/activity_home.xml
+++ b/OuFood/app/src/main/res/layout/activity_home.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".Activity.HomeActivity">
 
+
+
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
@@ -14,19 +16,19 @@
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    </FrameLayout>
+
 
     <LinearLayout
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
+        android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/border">
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <LinearLayout
