--- a/OuFood/app/src/main/res/layout/item_cart.xml
+++ b/OuFood/app/src/main/res/layout/item_cart.xml
@@ -24,6 +24,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/pic"
@@ -34,6 +35,7 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:text="title"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_margin="5dp"
