--- a/OuFood/app/src/main/res/layout/item_category.xml
+++ b/OuFood/app/src/main/res/layout/item_category.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="16dp"
@@ -21,7 +21,7 @@
             android:layout_height="72dp"
             android:layout_gravity="center"
             android:padding="12dp"
-            android:background="@color/blue"/>
+            android:background="@color/gray"/>
 
         <TextView
             android:id="@+id/textView_nameCategory"
@@ -29,6 +29,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
             android:text="title"
+            android:textColor="@color/black"
             android:textAlignment="center"
             android:textSize="18sp" />
     </LinearLayout>
