--- a/OuFood/app/src/main/res/layout/item_filter_foods.xml
+++ b/OuFood/app/src/main/res/layout/item_filter_foods.xml
@@ -1,60 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="122dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:backgroundTint="@color/blue"
-    app:cardCornerRadius="24dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="180dp"
+    android:layout_height="220dp"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="15dp"
+    android:background="@color/gray">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/layout_pic"
-            android:layout_width="122dp"
-            android:layout_height="122dp"
-            app:cardCornerRadius="24dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="96dp"
-                    android:layout_height="81dp"
-                    android:layout_centerInParent="true"
-                    app:cardCornerRadius="24dp">
-
-                    <ImageView
-                        android:id="@+id/pic"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop" />
-
-                </androidx.cardview.widget.CardView>
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
 
-            </RelativeLayout>
-
-
-        </androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/pic"
+            android:layout_width="160dp"
+            android:layout_height="150dp"
+            android:layout_margin="5dp"
+            android:src="@drawable/baseline_info_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_below="@+id/layout_pic"
-            android:layout_centerHorizontal="true"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="5dp"
-            android:text="name"
-            android:textSize="14sp" />
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="5dp"
+            android:text="Tên sản phẩm"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/pic"
+            app:layout_constraintStart_toStartOf="@+id/pic"
+            app:layout_constraintTop_toBottomOf="@+id/pic" />
 
 
-    </RelativeLayout>
-
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
