--- a/OuFood/app/src/main/res/layout/item_food_sale_a.xml
+++ b/OuFood/app/src/main/res/layout/item_food_sale_a.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="260dp"
-    android:layout_height="350dp"
+    android:layout_width="210dp"
+    android:layout_height="300dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="15dp"
     app:cardElevation="3dp">
@@ -16,7 +16,7 @@
         <ImageView
             android:id="@+id/pic"
             android:layout_width="0dp"
-            android:layout_height="206dp"
+            android:layout_height="150dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +29,7 @@
             android:padding="12dp"
             android:text="20%\nOFF"
             android:textStyle="bold"
-            android:textColor="@color/white"
+            android:textColor="@color/red"
             android:background="@color/yellow"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,19 +37,20 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pic"
-            app:layout_constraintVertical_bias="1.0">
+            app:layout_constraintTop_toBottomOf="@+id/pic">
 
             <ImageView
                 android:id="@+id/imageView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@+id/textView9"
-                app:layout_constraintStart_toStartOf="@+id/textView_name"
-                app:layout_constraintTop_toBottomOf="@+id/textView_name"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView_plus"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/star"
                 app:tint="@color/yellow" />
 
@@ -58,6 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="5"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView12"
@@ -70,6 +72,7 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:textColor="@color/black"
                 android:text="title"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -78,16 +81,17 @@
 
             <TextView
                 android:id="@+id/textView_plus"
-                android:layout_width="44dp"
+                android:layout_width="match_parent"
                 android:layout_height="39dp"
-                android:text="+"
                 android:background="@drawable/button_rounded"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="20sp"
                 android:gravity="center"
+                android:text="MUA"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
 
             <TextView
@@ -100,7 +104,7 @@
                 android:textColor="@color/blue"
                 android:textSize="18dp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/textView_plus"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
