--- a/OuFood/app/src/main/res/layout/item_food.xml
+++ b/OuFood/app/src/main/res/layout/item_food.xml
@@ -16,12 +16,24 @@
         <ImageView
             android:id="@+id/pic"
             android:layout_width="100dp"
-            android:layout_height="111dp"
+            android:layout_height="125dp"
             android:layout_margin="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/baseline_info_24"/>
+
+        <TextView
+            android:id="@+id/textView_discount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="20%\nOFF"
+            android:textStyle="bold"
+            android:textColor="@color/red"
+            android:background="@color/yellow"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
@@ -35,11 +47,11 @@
             <TextView
                 android:id="@+id/textView_name"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="70dp"
                 android:text="title"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
                 android:layout_margin="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -92,6 +104,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                 app:layout_constraintStart_toEndOf="@+id/imageView12"
                 app:layout_constraintTop_toTopOf="@+id/imageView12" />
+
 
             <TextView
                 android:id="@+id/textView_plus"
