--- a/OuFood/app/src/main/res/values/colors.xml
+++ b/OuFood/app/src/main/res/values/colors.xml
@@ -12,5 +12,10 @@
     <color name="main_color">#124FA0</color>
     <color name="color_text_background">#604CC3</color>
 
-
+    <color name="ratingVeryBad">#FF0000</color>       <!-- Đỏ: Rất không hài lòng -->
+    <color name="ratingBad">#FFA500</color>          <!-- Cam: Không hài lòng -->
+    <color name="ratingNeutral">#FFFF00</color>      <!-- Vàng: Bình thường -->
+    <color name="ratingGood">#90EE90</color>         <!-- Xanh nhạt: Hài lòng -->
+    <color name="ratingVeryGood">#008000</color>     <!-- Xanh lá cây: Rất hài lòng -->
+    <color name="ratingDefault">#CCCCCC</color>
 </resources>
