--- a/OuFood/app/src/main/res/layout/item_rating_food.xml
+++ b/OuFood/app/src/main/res/layout/item_rating_food.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/image_food"
-        android:layout_width="128sp"
-        android:layout_height="128sp"
+        android:layout_width="100dp"
+        android:layout_height="128dp"
         android:layout_weight="1"
         android:scaleType="centerCrop"
         android:src="@drawable/baseline_info_24" />
@@ -39,11 +39,11 @@
 
         <RatingBar
             android:id="@+id/ratingBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginLeft="10sp"
             android:numStars="5"
-            android:progressTint="@color/yellow"
+            android:progressTint="@color/ratingVeryGood"
             android:rating="5"
             android:stepSize="1" />
 
