--- a/OuFood/app/src/main/res/layout/activity_sale_list.xml
+++ b/OuFood/app/src/main/res/layout/activity_sale_list.xml
@@ -21,7 +21,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar_FoodList"
-            style="@style/Customer.ToolBar"
+            app:title="FLASH SALE"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/back_button" />
