--- a/OuFood/app/src/main/res/layout/activity_search.xml
+++ b/OuFood/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/white"
-    tools:context=".Activity.FoodListActivity">
+    tools:context=".Activity.SearchActivity">
 
     <ImageView
         android:layout_width="match_parent"
